--- a/Pages/index.html
+++ b/Pages/index.html
@@ -53,6 +53,7 @@
 </section>
 <section id="Cast"> <h2>Cast and Crew</h2>
     <div>
+      <p2>We At Lucas Films and Disney have assembled a amazing team for this Film!</p2>
       <h3>Starring</h3>
       <ul>
         <li>Mark Hamill</li>
@@ -86,6 +87,7 @@
     />
 
     <h5>Trailer</h5>
+    <p1>Sneak peek First Trailer</p1>
     <br>
     <a href="https://youtu.be/_eVva2R9Sx8" target="_blank">
       Vader Returns New trailer here!
@@ -101,5 +103,8 @@
       allowfullscreen
     ></iframe>
   </section>
+  <footer>
+    &copy;
+        </footer>
   </body>
 </html>
