--- a/Pages/index.html
+++ b/Pages/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/Css/style.css" />
-    <script src="index.js" defer></script>
+    <script src="/index.js" defer></script>
     <title>Vader Film Poster</title>
   </head>
   <!-- this well be the header
@@ -19,7 +19,7 @@
     <h1>A story of Evil in galaxy far far away...</h1>
     <!-- <h2>Darth Vader: A Star Wars Story</h2> -->
     <!-- have to add Ids to teh sections for nav bar and Dom uasge -->
-    <section id="Story"><h2>Darth Vader: A Star Wars Story</h2>
+    <section id="story"><h2>Darth Vader: A Star Wars Story</h2>
 
         <hr>
 
@@ -38,6 +38,7 @@
         inside.Now watch his mighty rise and tragic fall in this brand new epic
         film from Disney pictures and Lucasfilm!
       </p>
+      <p id="p1"> THis randomly created text well not show up on the page because i will remove it with DOm so grammar and sentence structure do not matter cause it will never be seen i could keep writing forever only those who see the code will ever know</p>
       <style>
         img {
           float: right;
@@ -50,8 +51,15 @@
         width="655px"
       />
     </div>
+    <br>
+    <br>
+    
 </section>
-<section id="Cast"> <h2>Cast and Crew</h2>
+<br>
+<br>
+<br>
+<hr>
+<section id="cast"> <h2>Cast and Crew</h2>
     <div>
       <p2>We At Lucas Films and Disney have assembled a amazing team for this Film!</p2>
       <h3>Starring</h3>
@@ -71,8 +79,10 @@
       </ol>
     </div>
   </section>
-  <section id="Trailer"><h2>Vader Has Returned!</h2>
-    <!-- <hr> Going to re-add this hr line break using DOM -->
+  <br>
+  <hr>
+  <section id="trailer"><h2>Vader Has Returned!</h2>
+   <br>
 
     <style>
       img {
@@ -85,7 +95,6 @@
       height="400px"
       width="355px"
     />
-
     <h5>Trailer</h5>
     <p1>Sneak peek First Trailer</p1>
     <br>
